<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FoodServices"
    android:theme="@style/TextColor"
    android:background="@color/DayBreakBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/DayBreakBackgroundColor"
        android:weightSum="1">

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MEALS"
        android:textStyle="bold"
        android:layout_gravity="center"
       android:textSize="18dp" />

        <TextView
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:text="@string/Christ_Episcopal_name"
            android:layout_weight="13.24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Christ_Episcopal_meals_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Christ_Episcopal_phone_address"
            android:autoLink="all"
            android:textColorLink="@color/myTextColorLink"/>

     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loaves_fishes_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loaves_fishes_meals_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loaves_fishes_contact_info"
            android:autoLink="all"
            android:textColorLink="@color/myTextColorLink"/>

     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macon_outreach_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macon_outreach_meals_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macon_outreach_contact_info"
            android:autoLink="all"
            android:textColorLink="@color/myTextColorLink"/>

     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_delivered_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_delivered_meals_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_delivered_contact_info"
            android:autoLink="all"
            android:textColorLink="@color/myTextColorLink"/>


     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daybreak_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daybreak_meals_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daybreak_contact_info"
            android:autoLink="all"
            android:textColorLink="@color/myTextColorLink"/>


     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_mission_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_mission_meals_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_mission_contact_info"
            android:autoLink="all"
            android:textColorLink="@color/myTextColorLink"/>

    </LinearLayout>

</ScrollView>
